# industrial_robot_motion_interface

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
action/: FollowTrajectory.action
msg/: MotionPrimitive.msg
